tests/bad_programs/type_errors/bool_preincr.nc
int main() {
    bool b;
    ++b;
    return 0;
}
